# treeherder-cli

./: Cargo.toml  LICENSE  README.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: api.rs  cache.rs  cli.rs  main.rs  models.rs  util.rs
src/output/: json.rs  markdown.rs  mod.rs
tests/: artifact_test.rs  compare_test.rs  group_by_test.rs  json_output_test.rs  perf_test.rs  platform_filter_test.rs  similar_history_test.rs  watch_test.rs
