[package]
name = "treeherder-cli"
version = "0.1.0"
edition = "2021"
description = "Fetch errors from a Firefox CI push on Treeherder, formatted as markdown"
license = "MPL-2.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
url = "2.4"
indicatif = "0.17"
regex = "1.10"
futures = "0.3"
tempfile = "3.8"
colored = "2.1"
comfy-table = "=7.0.0"
notify-rust = "4.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
